// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > Progress baseVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-6bf735e8=""
>
  <div
    class="example-progress__item"
    data-v-6bf735e8=""
  >
    <div
      class="t-progress"
      data-v-6bf735e8=""
    >
      <div
        class="t-progress--thin t-progress--status-default"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 80%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          80%
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="summary"
    data-v-6bf735e8=""
  >
    百分比内显
  </div>
  <div
    class="example-progress__item"
    data-v-6bf735e8=""
  >
    <div
      class="t-progress"
      data-v-6bf735e8=""
    >
      <!---->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
      >
        <div
          class="t-progress__inner"
          style="width: 80%;"
        >
          <div
            class="t-progress__info"
          >
            80%
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
    data-v-6bf735e8=""
  >
    环形进度条
  </div>
  <div
    class="example-progress__item"
    data-v-6bf735e8=""
  >
    <div
      class="t-progress"
      data-v-6bf735e8=""
    >
      <!---->
      <!---->
      <div
        class="t-progress--circle t-progress--status-default"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          30%
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="99.90264638415542  233.10617489636263"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="summary"
    data-v-6bf735e8=""
  >
    微型环形进度条
  </div>
  <div
    class="example-progress__item"
    data-v-6bf735e8=""
  >
    <div
      class="t-progress"
      data-v-6bf735e8=""
    >
      <!---->
      <!---->
      <div
        class="t-progress--circle t-progress--status-default"
        style="width: 24px; height: 24px;"
      >
        <!---->
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <circle
            class="t-progress__circle-outer"
            cx="12"
            cy="12"
            fill="none"
            r="11"
            stroke-width="2"
          />
          <circle
            class="t-progress__circle-inner"
            cx="12"
            cy="12"
            fill="none"
            r="11"
            stroke-dasharray="20.73451151369263  48.3805268652828"
            stroke-linecap="round"
            stroke-width="2"
            transform="matrix(0,-1,1,0,0,24)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress circleVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-bde2731b=""
>
  <div
    class="example-progress__item"
    data-v-bde2731b=""
  >
    <div
      class="t-progress"
      data-v-bde2731b=""
    >
      <!---->
      <!---->
      <div
        class="t-progress--circle t-progress--status-default"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          30%
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="99.90264638415542  233.10617489636263"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-bde2731b=""
  >
    <div
      class="t-progress"
      data-v-bde2731b=""
    >
      <!---->
      <!---->
      <div
        class="t-progress--circle t-progress--status-warning"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-error t-progress__icon"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="error"
            >
              <path
                d="M12 3L12 15.5M12 20H12.0039V20.0039H12V20Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="99.90264638415542  233.10617489636263"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-bde2731b=""
  >
    <div
      class="t-progress"
      data-v-bde2731b=""
    >
      <!---->
      <!---->
      <div
        class="t-progress--circle t-progress--status-error"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-close t-progress__icon"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="close"
            >
              <path
                d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="99.90264638415542  233.10617489636263"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-bde2731b=""
  >
    <div
      class="t-progress"
      data-v-bde2731b=""
    >
      <!---->
      <!---->
      <div
        class="t-progress--circle t-progress--status-success"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-check t-progress__icon"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="check"
            >
              <path
                d="M19.5708 7.37842L10.3785 16.5708L5.42871 11.6211"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="333.0088212805181  0"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress lineVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-fdfcc2a1=""
>
  <div
    class="example-progress__item"
    data-v-fdfcc2a1=""
  >
    <div
      class="t-progress"
      data-v-fdfcc2a1=""
    >
      <div
        class="t-progress--thin t-progress--status-default"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 78%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          78%
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-fdfcc2a1=""
  >
    <div
      class="t-progress"
      data-v-fdfcc2a1=""
    >
      <div
        class="t-progress--thin t-progress--status-warning"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 80%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-progress__icon"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-fdfcc2a1=""
  >
    <div
      class="t-progress"
      data-v-fdfcc2a1=""
    >
      <div
        class="t-progress--thin t-progress--status-error"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 80%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-progress__icon"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-fdfcc2a1=""
  >
    <div
      class="t-progress"
      data-v-fdfcc2a1=""
    >
      <div
        class="t-progress--thin t-progress--status-success"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 80%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-progress__icon"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-fdfcc2a1=""
  >
    <div
      class="t-progress"
      data-v-fdfcc2a1=""
    >
      <div
        class="t-progress--thin t-progress--status-active"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 78%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          78%
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`Progress > Progress mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-973a32c7=""
>
  <h1
    class="title"
    data-v-973a32c7=""
  >
    Progress 进度条
  </h1>
  <p
    class="summary"
    data-v-973a32c7=""
  >
    用于展示任务当前的进度。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-973a32c7=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        线性进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="example-progress"
        data-v-6bf735e8=""
        data-v-973a32c7=""
      >
        <div
          class="example-progress__item"
          data-v-6bf735e8=""
        >
          <div
            class="t-progress"
            data-v-6bf735e8=""
          >
            <div
              class="t-progress--thin t-progress--status-default"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 80%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                80%
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <div
          class="summary"
          data-v-6bf735e8=""
        >
          百分比内显
        </div>
        <div
          class="example-progress__item"
          data-v-6bf735e8=""
        >
          <div
            class="t-progress"
            data-v-6bf735e8=""
          >
            <!---->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
            >
              <div
                class="t-progress__inner"
                style="width: 80%;"
              >
                <div
                  class="t-progress__info"
                >
                  80%
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
          data-v-6bf735e8=""
        >
          环形进度条
        </div>
        <div
          class="example-progress__item"
          data-v-6bf735e8=""
        >
          <div
            class="t-progress"
            data-v-6bf735e8=""
          >
            <!---->
            <!---->
            <div
              class="t-progress--circle t-progress--status-default"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                30%
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="99.90264638415542  233.10617489636263"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="summary"
          data-v-6bf735e8=""
        >
          微型环形进度条
        </div>
        <div
          class="example-progress__item"
          data-v-6bf735e8=""
        >
          <div
            class="t-progress"
            data-v-6bf735e8=""
          >
            <!---->
            <!---->
            <div
              class="t-progress--circle t-progress--status-default"
              style="width: 24px; height: 24px;"
            >
              <!---->
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="12"
                  cy="12"
                  fill="none"
                  r="11"
                  stroke-width="2"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="12"
                  cy="12"
                  fill="none"
                  r="11"
                  stroke-dasharray="20.73451151369263  48.3805268652828"
                  stroke-linecap="round"
                  stroke-width="2"
                  transform="matrix(0,-1,1,0,0,24)"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-973a32c7=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        线性进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-973a32c7=""
        data-v-fdfcc2a1=""
      >
        <div
          class="example-progress__item"
          data-v-fdfcc2a1=""
        >
          <div
            class="t-progress"
            data-v-fdfcc2a1=""
          >
            <div
              class="t-progress--thin t-progress--status-default"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 78%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                78%
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-fdfcc2a1=""
        >
          <div
            class="t-progress"
            data-v-fdfcc2a1=""
          >
            <div
              class="t-progress--thin t-progress--status-warning"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 80%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled t-progress__icon"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-fdfcc2a1=""
        >
          <div
            class="t-progress"
            data-v-fdfcc2a1=""
          >
            <div
              class="t-progress--thin t-progress--status-error"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 80%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled t-progress__icon"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-fdfcc2a1=""
        >
          <div
            class="t-progress"
            data-v-fdfcc2a1=""
          >
            <div
              class="t-progress--thin t-progress--status-success"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 80%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled t-progress__icon"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-fdfcc2a1=""
        >
          <div
            class="t-progress"
            data-v-fdfcc2a1=""
          >
            <div
              class="t-progress--thin t-progress--status-active"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 78%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                78%
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-973a32c7=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        百分比内显进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-119b6ec1=""
        data-v-973a32c7=""
      >
        <div
          class="example-progress__item"
          data-v-119b6ec1=""
        >
          <div
            class="t-progress"
            data-v-119b6ec1=""
          >
            <!---->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
            >
              <div
                class="t-progress__inner"
                style="width: 80%;"
              >
                <div
                  class="t-progress__info"
                >
                  80%
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-119b6ec1=""
        >
          <div
            class="t-progress"
            data-v-119b6ec1=""
          >
            <!---->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-success"
            >
              <div
                class="t-progress__inner"
                style="width: 100%;"
              >
                <div
                  class="t-progress__info"
                >
                  100%
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-119b6ec1=""
        >
          <div
            class="t-progress"
            data-v-119b6ec1=""
          >
            <!---->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-warning"
            >
              <div
                class="t-progress__inner"
                style="width: 80%;"
              >
                <div
                  class="t-progress__info"
                >
                  80%
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-119b6ec1=""
        >
          <div
            class="t-progress"
            data-v-119b6ec1=""
          >
            <!---->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-error"
            >
              <div
                class="t-progress__inner"
                style="width: 80%;"
              >
                <div
                  class="t-progress__info"
                >
                  80%
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-119b6ec1=""
        >
          <div
            class="t-progress"
            data-v-119b6ec1=""
          >
            <!---->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-active"
            >
              <div
                class="t-progress__inner"
                style="width: 80%;"
              >
                <div
                  class="t-progress__info"
                >
                  80%
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-973a32c7=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        环形进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-973a32c7=""
        data-v-bde2731b=""
      >
        <div
          class="example-progress__item"
          data-v-bde2731b=""
        >
          <div
            class="t-progress"
            data-v-bde2731b=""
          >
            <!---->
            <!---->
            <div
              class="t-progress--circle t-progress--status-default"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                30%
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="99.90264638415542  233.10617489636263"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-bde2731b=""
        >
          <div
            class="t-progress"
            data-v-bde2731b=""
          >
            <!---->
            <!---->
            <div
              class="t-progress--circle t-progress--status-warning"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-error t-progress__icon"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="error"
                  >
                    <path
                      d="M12 3L12 15.5M12 20H12.0039V20.0039H12V20Z"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="99.90264638415542  233.10617489636263"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-bde2731b=""
        >
          <div
            class="t-progress"
            data-v-bde2731b=""
          >
            <!---->
            <!---->
            <div
              class="t-progress--circle t-progress--status-error"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-close t-progress__icon"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="close"
                  >
                    <path
                      d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="99.90264638415542  233.10617489636263"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-bde2731b=""
        >
          <div
            class="t-progress"
            data-v-bde2731b=""
          >
            <!---->
            <!---->
            <div
              class="t-progress--circle t-progress--status-success"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-check t-progress__icon"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="check"
                  >
                    <path
                      d="M19.5708 7.37842L10.3785 16.5708L5.42871 11.6211"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="333.0088212805181  0"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Progress > Progress plumpVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-119b6ec1=""
>
  <div
    class="example-progress__item"
    data-v-119b6ec1=""
  >
    <div
      class="t-progress"
      data-v-119b6ec1=""
    >
      <!---->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
      >
        <div
          class="t-progress__inner"
          style="width: 80%;"
        >
          <div
            class="t-progress__info"
          >
            80%
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-119b6ec1=""
  >
    <div
      class="t-progress"
      data-v-119b6ec1=""
    >
      <!---->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-success"
      >
        <div
          class="t-progress__inner"
          style="width: 100%;"
        >
          <div
            class="t-progress__info"
          >
            100%
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-119b6ec1=""
  >
    <div
      class="t-progress"
      data-v-119b6ec1=""
    >
      <!---->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-warning"
      >
        <div
          class="t-progress__inner"
          style="width: 80%;"
        >
          <div
            class="t-progress__info"
          >
            80%
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-119b6ec1=""
  >
    <div
      class="t-progress"
      data-v-119b6ec1=""
    >
      <!---->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-error"
      >
        <div
          class="t-progress__inner"
          style="width: 80%;"
        >
          <div
            class="t-progress__info"
          >
            80%
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-119b6ec1=""
  >
    <div
      class="t-progress"
      data-v-119b6ec1=""
    >
      <!---->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-active"
      >
        <div
          class="t-progress__inner"
          style="width: 80%;"
        >
          <div
            class="t-progress__info"
          >
            80%
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;
